2003-08-02  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/createthread.c (do_clone): If __ASSUME_CLONE_STOPPED
	is not defined, do explicit synchronization.
	(create_thread): Do not lock pd->lock here.  If __ASSUME_CLONE_STOPPED
	is not defined also unlock pd->lock for non-debugging case in case
	it is necessary.
	* pthread_create.c (start_thread): Always get and release pd->lock
	if __ASSUME_CLONE_STOPPED is not defined.
	(start_thread_debug): Removed.  Adjust users.
	* allocatestack.c (allocate_stack): Always initialize lock if
	__ASSUME_CLONE_STOPPED is not defined.
	* Makefile (tests): Add tst-sched1.
	* tst-sched1.c: New file.

	* sysdeps/pthread/createthread.c (do_clone): Only use
	sched_setschduler and pass correct parameters.

2003-07-31  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/pthread/pthread.h (pthread_attr_setstackaddr,
	pthread_attr_setstacksize): Change PTHREAD_STACK_SIZE to
	PTHREAD_STACK_MIN in comments.

2003-07-31  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/pthread/pthread_cond_timedwait.c (__pthread_cond_timedwait):
	Shut up warnings if INTERNAL_SYSCALL_ERROR_P does not use its first
	argument.
	* sysdeps/unix/sysv/linux/timer_create.c (timer_create): Likewise.
	* pthread_condattr_setclock.c (pthread_condattr_setclock): Likewise.
	* sysdeps/unix/sysv/linux/s390/jmp-unwind.c: Include pthreaddef.h.
	(__pthread_cleanup_upto): Fix prototype.
	(_longjmp_unwind): Adjust caller.
	* sysdeps/unix/sysv/linux/s390/lowlevellock.h (__lll_mutex_timedlock):
	Change second argument to const struct pointer.
	* tst-sem8.c (main): Remove unused s2 and s3 variables.
	* tst-sem9.c (main): Likewise.
	* unwind.c: Include string.h for strlen prototype.

2003-07-31  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_timedwait.S
	(__pthread_cond_timedwait): Don't use cmov unless HAVE_CMOV is defined.
	* sysdeps/unix/sysv/linux/i386/i686/pthread_cond_timedwait.S:
	Define HAVE_CMOV.